plugins {
    alias(libs.plugins.android.library)
    id 'maven-publish'
}

group = 'biz.nostr'
version = '2.0.0'

android {
    namespace 'biz.nostr.android'
    compileSdk 34

    defaultConfig {
        minSdk 21

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
        consumerProguardFiles "consumer-rules.pro"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }

    publishing {
        singleVariant("release") {
            withSourcesJar()
            withJavadocJar()
        }
    }
}

publishing {
    publications {
        mavenAar(MavenPublication) {
            groupId = group
            artifactId = 'nostr-android'
            version = version

            afterEvaluate {
                from components.release
            }

            pom {
                name = 'NIP-55 Android Library'
                description = 'An Android library implementing NIP-55 for Nostr.'
                url = 'https://github.com/chebizarro/NostrAndroid'

                licenses {
                    license {
                        name = 'MIT License'
                        url = 'https://opensource.org/licenses/MIT'
                    }
                }
                developers {
                    developer {
                        id = 'chebizarro'
                        name = 'Biz'
                        email = 'chebizarro@protonmail.com'
                    }
                }
                scm {
                    connection = 'scm:git:git://github.com/chebizarro/NostrAndroid.git'
                    developerConnection = 'scm:git:ssh://github.com/chebizarro/NostrAndroid.git'
                    url = 'https://github.com/chebizarro/NostrAndroid'
                }
            }
        }
    }
    repositories {
        google()
        maven { url "https://jitpack.io" }
        mavenCentral()
        mavenLocal()
    }
}

dependencies {
    // No runtime AndroidX dependencies required for this library
    testImplementation libs.junit
    testImplementation 'org.robolectric:robolectric:4.11.1'
    testImplementation 'androidx.test:core:1.5.0'
    androidTestImplementation libs.ext.junit
    androidTestImplementation libs.espresso.core
}